# ffmpeg_Player_new

./: local.properties
app/: build.gradle
app/src/main/java/com/ywl5320/player/activity/: RadioLiveActivity.java  VideoLiveActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
libwlplayer/: CMakeLists.txt
libwlplayer/src/androidTest/java/com/ywl5320/ZXPlayer/: ExampleInstrumentedTest.java
libwlplayer/src/main/: AndroidManifest.xml
libwlplayer/src/main/cpp/: JavaJNICallback.cpp  WlFFmpeg.cpp  WlFFmpeg.h  WlJavaCall.cpp  base_player.cpp  video_player_control.h  wlplayer.cpp
libwlplayer/src/main/cpp/audio/: WlAudio.cpp  WlAudio.h  audio_channel.cpp  audio_decoder.cpp  audio_output.cpp  audio_output.h
libwlplayer/src/main/cpp/common/: AndroidLog.h  CommonTools.h  WlQueue.cpp
libwlplayer/src/main/cpp/common/opensl_media/: opensl_es_context.h
libwlplayer/src/main/cpp/video/: WlVideo.cpp  WlVideo.h  video_decoder.cpp
libwlplayer/src/main/java/com/ywl5320/ZXPlayer/: ZXVideoPlayer.java
libwlplayer/src/main/java/com/ywl5320/listener/: WlOnInfoListener.java
libwlplayer/src/main/java/com/ywl5320/opengles/: ShaderUtils.java  WlGlRender.java  ZXGlSurfaceView.java
libwlplayer/src/main/java/com/ywl5320/wlplayer/: WlPlayer.java
libzxplayer/: CMakeLists.txt
libzxplayer/src/main/cpp/: JavaJNICallback.h  ZXVideoPlayer.cpp  base_player.h  video_player_control.cpp
libzxplayer/src/main/cpp/audio/: audio_channel.h  audio_decoder.h
libzxplayer/src/main/cpp/common/: WlQueue.h
libzxplayer/src/main/cpp/video/: video_decoder.h
libzxplayer/src/main/java/com/ywl5320/ZXPlayer/: WlTimeBean.java
libzxplayer/src/test/java/com/ywl5320/ZXPlayer/: ExampleUnitTest.java
